Merged changes from oAW 4.3.1